Cambio de mensaje

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Hola Vanesa, tal vez no sean reales, pero no te quedas sin tus flores amarillas</h1>
-        <h1>Te amo <3</h1>
-        <h1>Atte HP</h1>
+        <h1>Hola Vanesa, esto no caduca, te mereces esto y más</h1>
+        <h1> Espero mejores pronto<3</h1>
+        <h1>Atte LM</h1>
         <div class="flower-container">
             <!-- Las flores se agregarán y eliminarán aquí mediante JavaScript -->
         </div>
